--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -18,6 +18,7 @@
     "node-schedule": "^1.3.0",
     "node-schedule-tz": "^1.2.1-4",
     "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "lodash": ">=4.17.21"
   }
 }
